istio/security/opa/opa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: opa
  name: opa
  namespace: opa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
    spec:
      containers:
        - image: openpolicyagent/opa:0.61.0-envoy
          name: opa
          args:
            - "run"
            - "--server"
            - "--disable-telemetry"
            - "--config-file=/config/config.yaml"
            - "--log-level=debug"
            - "--diagnostic-addr=0.0.0.0:8282"
            - "/policy/policy.rego" # Default policy
          volumeMounts:
            - mountPath: "/config"
              name: opa-config
            - mountPath: "/policy"
              name: opa-policy
      volumes:
        - name: opa-config
          configMap:
            name: opa-config
        - name: opa-policy
          configMap:
            name: opa-policy
---
apiVersion: v1
kind: Service
metadata:
  name: opa
  namespace: opa
  labels:
    app: opa
spec:
  ports:
    - port: 9191
      protocol: TCP
      name: grpc
  selector:
    app: opa
---
