istio/security/opa/policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: my-opa-authz
  namespace: istio-system
spec:
  # selector:
  #   matchLabels:
  #     ext-authz: enabled
  action: CUSTOM
  provider:
    name: "opa.local"
  rules:
    - to:
        - operation:
            paths: ["/*"]
            methods: ["GET", "POST", "PUT", "DELETE"]
